style: Adjust button icon size and margin for better alignment

--- a/src/app/pages/drafts/drafts.component.scss
+++ b/src/app/pages/drafts/drafts.component.scss
@@ -260,6 +260,15 @@
   }
 }
 
+button {
+  .mat-icon {
+    font-size: 1.125rem;
+    height: 1.125rem;
+    width: 1.125rem;
+    margin-bottom: 0px;
+  }
+}
+
 // Responsive design
 @media (max-width: 768px) {
   .drafts-container {
