--- a/src/theme.scss
+++ b/src/theme.scss
@@ -4,110 +4,104 @@
 @use 'sass:map';
 @use '@angular/material' as mat;
 
-// Note: Color palettes are generated from primary: #ffffff
+// Note: Color palettes are generated from primary: #6c66bd, secondary: #8b53b3, tertiary: #306bad, neutral: #50507c, neutral variant: #bea2d5
 $_palettes: (
-  primary: (
-    0: #000000,
-    10: #1a1c1c,
-    20: #2f3131,
-    25: #3a3c3c,
-    30: #454747,
-    35: #515353,
-    40: #5d5f5f,
-    50: #767777,
-    60: #909191,
-    70: #aaabab,
-    80: #c6c6c7,
-    90: #e2e2e2,
-    95: #f0f1f1,
-    98: #f9f9f9,
-    99: #fcfcfc,
+  primary: (0: #000000,
+    10: #140364,
+    20: #2a2278,
+    25: #362e83,
+    30: #413b8f,
+    35: #4d479c,
+    40: #5953a9,
+    50: #726cc4,
+    60: #8c86e0,
+    70: #a7a1fd,
+    80: #c5c0ff,
+    90: #e3dfff,
+    95: #f3eeff,
+    98: #fcf8ff,
+    99: #fffbff,
     100: #ffffff,
   ),
-  secondary: (
-    0: #000000,
-    10: #1b1c1c,
-    20: #303030,
-    25: #3b3b3b,
-    30: #474747,
-    35: #525252,
-    40: #5e5e5e,
-    50: #777777,
-    60: #919090,
-    70: #acabab,
-    80: #c8c6c6,
-    90: #e4e2e2,
-    95: #f2f0f0,
-    98: #fbf9f8,
-    99: #fefcfb,
+  secondary: (0: #000000,
+    10: #2f004d,
+    20: #4a0e72,
+    25: #561e7e,
+    30: #632b8a,
+    35: #6f3897,
+    40: #7c45a4,
+    50: #975ebf,
+    60: #b278db,
+    70: #cf93f8,
+    80: #e2b5ff,
+    90: #f3daff,
+    95: #fbecff,
+    98: #fff7fd,
+    99: #fffbff,
     100: #ffffff,
   ),
-  tertiary: (
-    0: #000000,
-    10: #1a1c1c,
-    20: #2f3131,
-    25: #3a3c3c,
-    30: #454747,
-    35: #515353,
-    40: #5d5f5f,
-    50: #767777,
-    60: #909191,
-    70: #aaabab,
-    80: #c6c6c7,
-    90: #e2e2e2,
-    95: #f0f1f1,
-    98: #f9f9f9,
-    99: #fcfcfc,
+  tertiary: (0: #000000,
+    10: #001c39,
+    20: #00315c,
+    25: #003c6f,
+    30: #004883,
+    35: #0a5494,
+    40: #2160a1,
+    50: #4179bc,
+    60: #5d93d8,
+    70: #78aef4,
+    80: #a3c9ff,
+    90: #d3e3ff,
+    95: #ebf1ff,
+    98: #f8f9ff,
+    99: #fdfcff,
     100: #ffffff,
   ),
-  neutral: (
-    0: #000000,
-    10: #1c1b1b,
-    20: #313030,
-    25: #3c3b3b,
-    30: #474646,
-    35: #535252,
-    40: #5f5e5e,
-    50: #787776,
-    60: #929090,
-    70: #adabaa,
-    80: #c9c6c5,
-    90: #e5e2e1,
-    95: #f4f0ef,
-    98: #fcf8f8,
-    99: #f6feff,
+  neutral: (0: #000000,
+    10: #201923,
+    20: #362e39,
+    25: #413944,
+    30: #4d444f,
+    35: #584f5b,
+    40: #655b67,
+    50: #7e7480,
+    60: #988d9a,
+    70: #b3a7b5,
+    80: #cfc2d1,
+    90: #ecdeed,
+    95: #faecfb,
+    98: #fff7fc,
+    99: #fffbff,
     100: #ffffff,
-    4: #0e0e0e,
-    6: #141313,
-    12: #201f1f,
-    17: #2a2a2a,
-    22: #353434,
-    24: #3a3939,
-    87: #ddd9d9,
-    92: #ebe7e7,
-    94: #f1edec,
-    96: #f6f3f2,
+    4: #120c15,
+    6: #18111b,
+    12: #241d27,
+    17: #2f2732,
+    22: #3a323d,
+    24: #3f3642,
+    87: #e3d6e4,
+    92: #f2e4f3,
+    94: #f7eaf8,
+    96: #fdeffe,
   ),
-  neutral-variant: (
-    0: #000000,
-    10: #181c1d,
-    20: #2d3132,
-    25: #383c3d,
-    30: #444748,
-    35: #4f5354,
-    40: #5b5f60,
-    50: #747878,
-    60: #8e9192,
-    70: #a8acac,
-    80: #c4c7c8,
-    90: #e0e3e3,
-    95: #eef1f2,
-    98: #f7fafa,
-    99: #fafdfd,
+  neutral-variant: (0: #000000,
+    10: #26113b,
+    20: #3c2751,
+    25: #48325d,
+    30: #543d69,
+    35: #604975,
+    40: #6d5482,
+    50: #866d9c,
+    60: #a186b7,
+    70: #bca0d3,
+    80: #d9bbf0,
+    90: #f0dbff,
+    95: #faecff,
+    98: #fff7fe,
+    99: #fffbff,
     100: #ffffff,
   ),
-  error: (
-    0: #000000,
+  error: (0: #000000,
     10: #410002,
     20: #690005,
     25: #7e0007,
