style: Change button type to mat-icon-button and remove text label for more options

--- a/src/app/components/event/event-menu/event-menu.component.html
+++ b/src/app/components/event/event-menu/event-menu.component.html
@@ -1,12 +1,11 @@
 @if (view() === 'full') {
   <button
-    mat-button
+    mat-icon-button
     [matMenuTriggerFor]="menu"
     aria-label="More options"
     (click)="$event.stopPropagation()"
   >
     <mat-icon>more_vert</mat-icon>
-    More options
   </button>
 } @else {
   <button
